added views, schemas, seed data, and a few routes

--- a/views/layouts-main.hbs
+++ b/views/layouts-main.hbs
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pdf Creator</title>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/css/materialize.min.css">
+    <title>Project 2</title>
 </head>
 <body>
+    <nav>
+        <div class="nav-wrapper">
+            <a href="#" class="brand-logo">Clothes App</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="/">Home</a></li>
+                <li><a href="/closet">Closet</a></li>
+                <li><a href="/about">About</a></li>
+            </ul>
+        </div>
+    </nav>
     {{{body}}}
 </body>
 </html>
