--- a/views/layouts-main.hbs
+++ b/views/layouts-main.hbs
@@ -4,21 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/css/materialize.min.css">
     <title>Project 2</title>
 </head>
 <body>
-    <nav>
+    <ul id="dropdown1" class="dropdown-content">
+        <li><a href="/clothes/accessories/">Accessories</a></li>
+        <li><a href="/clothes/shirts/">Shirts</a></li>
+        <li><a href="/clothes/pants">Pants</a></li>
+        <li><a href="/clothes/shoes">Shoes</a></li>
+    </ul>
+    <nav class="red darken-2">
         <div class="nav-wrapper">
-            <a href="#" class="brand-logo">Clothes App</a>
+            <a href="/" class="brand-logo">Clothes App</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="/">Home</a></li>
-                <li><a href="/closet">Closet</a></li>
-                <li><a href="/about">About</a></li>
+                <!-- Dropdown Trigger -->
+                <li><a href="/clothes/closet" data-target="dropdown1">Closet</a></li>
+                <li><a href="/clothes/about">About</a></li>
+                <!-- Dropdown Trigger -->
+                <li><a class ="dropdown-trigger" href="#" data-target="dropdown1"><i class="material-icons">more_vert</i></a></li>
+                <form class="right">
+                    <div class="input-field">
+                    <input id="search" type="search" required>
+                    <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                    <i class="material-icons">close</i>
+                    </div>
+                </form>
             </ul>
         </div>
     </nav>
+
+<div class="container">
     {{{body}}}
+</div>
+
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="assets/js/script.js"></script>
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/js/materialize.min.js"></script>
 </body>
 </html>
