--- a/views/layouts-main.hbs
+++ b/views/layouts-main.hbs
@@ -12,10 +12,10 @@
 </head>
 <body>
     <ul id="dropdown1" class="dropdown-content">
-        <li><a href="/clothes/accessories/">Accessories</a></li>
-        <li><a href="/clothes/shirts/">Shirts</a></li>
-        <li><a href="/clothes/pants">Pants</a></li>
-        <li><a href="/clothes/shoes">Shoes</a></li>
+        <li><a href="/accessories/">Accessories</a></li>
+        <li><a href="/shirts/">Shirts</a></li>
+        <li><a href="/pants">Pants</a></li>
+        <li><a href="/shoes">Shoes</a></li>
     </ul>
     <nav class="red darken-2">
         <div class="nav-wrapper">
@@ -23,8 +23,8 @@
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="/">Home</a></li>
                 <!-- Dropdown Trigger -->
-                <li><a href="/clothes/closet" data-target="dropdown1">Closet</a></li>
-                <li><a href="/clothes/about">About</a></li>
+                <li><a href="/closet" data-target="dropdown1">Closet</a></li>
+                <li><a href="/about">About</a></li>
                 <!-- Dropdown Trigger -->
                 <li><a class ="dropdown-trigger" href="#" data-target="dropdown1"><i class="material-icons">more_vert</i></a></li>
                 <form class="right">
