changed some routes and started on post

--- a/views/closet.hbs
+++ b/views/closet.hbs
@@ -3,3 +3,13 @@
 {{!-- {{pants}} --}}
 {{!-- {{shoes}} --}}
 <h1 class="center">Closet</h1>
+{{!-- {{#each accessories as |closet|}}
+    <h2 class="#">
+        {{#if accessories.images}}
+        <img src={{accessories.images}} alt="accessory-image" class="accessory-image"></img>
+        {{else}}
+        <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/340719-200.png" alt="accessory-image" class="accessory-image"></img>
+        {{/if}}
+        <a href="/closet/{{accessories.name}}">{{accessories.name}}</a>
+    </h2>
+{{/each}} --}}
