--- a/views/layouts-main.hbs
+++ b/views/layouts-main.hbs
@@ -12,10 +12,10 @@
 </head>
 <body>
     <ul id="dropdown1" class="dropdown-content">
-        <li><a href="/accessories/">Accessories</a></li>
-        <li><a href="/shirts/">Shirts</a></li>
-        <li><a href="/pants">Pants</a></li>
-        <li><a href="/shoes">Shoes</a></li>
+        <li><a href="/closet/accessories/">Accessories</a></li>
+        <li><a href="/closet/shirts/">Shirts</a></li>
+        <li><a href="/closet/pants">Pants</a></li>
+        <li><a href="/closet/shoes">Shoes</a></li>
     </ul>
     <nav class="red darken-2">
         <div class="nav-wrapper">
