working on post

--- a/views/closet.hbs
+++ b/views/closet.hbs
@@ -3,7 +3,7 @@
 {{!-- {{pants}} --}}
 {{!-- {{shoes}} --}}
 <h1 class="center">Closet</h1>
-{{!-- {{#each accessories as |closet|}}
+{{#each accessories as |closet|}}
     <h2 class="#">
         {{#if accessories.images}}
         <img src={{accessories.images}} alt="accessory-image" class="accessory-image"></img>
@@ -12,4 +12,4 @@
         {{/if}}
         <a href="/closet/{{accessories.name}}">{{accessories.name}}</a>
     </h2>
-{{/each}} --}}
+{{/each}}
