added new views for adding items and made buttons for and forms for adding items

--- a/views/add-accessories.hbs
+++ b/views/add-accessories.hbs
@@ -7,6 +7,11 @@
         <input type="text" name="accessories[color]" placeholder="Color" />
         <input type="text" name="accessories[images]" placeholder="Image URL" />
         <input type="text" name="accessories[tags]" placeholder="Tags" />
-        <input type="submit" value="Add An Accessory" class="submit-button center" />
+        {{!-- <input type="submit" value="Add An Accessory" class="submit-button" /> --}}
+    <div class=row>
+        <button class="btn waves-effect waves-light col s4 offset-s4 m2 offset-m5" type="submit" name="action">Submit
+        <i class="material-icons right">send</i>
+        </button>
+    </div>
     </form>
 </div>
