--- a/views/shirts.hbs
+++ b/views/shirts.hbs
@@ -1,1 +1,8 @@
 <h1 class="center">Shirts</h1>
+<div class=row>
+        <a href="/add-shirts">
+        <button class="btn waves-effect waves-light col s6 offset-s3 m4 offset-m4 l4 offset-l4" type="submit" name="action">Add Shirts
+        <i class="material-icons right">send</i>
+        </button>
+        </a>
+</div>
