--- a/views/shoes.hbs
+++ b/views/shoes.hbs
@@ -1,1 +1,8 @@
 <h1 class="center">Shoes</h1>
+<div class=row>
+        <a href="/add-shoes">
+        <button class="btn waves-effect waves-light col s6 offset-s3 m4 offset-m4 l4 offset-l4" type="submit" name="action">Add Shoes
+        <i class="material-icons right">send</i>
+        </button>
+        </a>
+</div>
