added input fields to more pages

--- a/views/add-accessories.hbs
+++ b/views/add-accessories.hbs
@@ -1,5 +1,5 @@
 <div class="#">
-    <h1>Add a new item</h1>
+    <h1 class="center">Add A New Accessory</h1>
 
     <form action="/add-accessories" method="post" class="new-accessories-form">
         <input type="text" name="accessories[name]" placeholder="Name " />
