spellig errors mostly

--- a/views/add-pants.hbs
+++ b/views/add-pants.hbs
@@ -1,5 +1,5 @@
 <div class="#">
-    <h1 class="center">Add A New Pants</h1>
+    <h1 class="center">Add A New Pair of Pants</h1>
 
     <form action="/add-shirts" method="post" class="new-pants-form">
         <input type="text" name="pants[name]" placeholder="Name " />
