--- a/views/add-shoes.hbs
+++ b/views/add-shoes.hbs
@@ -1,7 +1,7 @@
 <div class="#">
-    <h1 class="center">Add A New Shoes</h1>
+    <h1 class="center">Add A New Pair of Shoes</h1>
 
-    <form action="/add-shirts" method="post" class="new-shoes-form">
+    <form action="/add-shoes" method="post" class="new-shoes-form">
         <input type="text" name="shoes[name]" placeholder="Name " />
         <input type="text" name="shoes[category]" placeholder="Category" />
         <input type="text" name="shoes[color]" placeholder="Color" />
@@ -9,7 +9,7 @@
         <input type="text" name="shoes[tags]" placeholder="Tags" />
         {{!-- <input type="submit" value="Add An Accessory" class="submit-button" /> --}}
     <div class=row>
-        <button class="btn waves-effect waves-light col s4 offset-s4 m2 offset-m5" type="submit" name="action">Submit
+        <button class="btn waves-effect waves-light col s12" type="submit" name="action">Submit
         <i class="material-icons right">send</i>
         </button>
     </div>
