--- a/views/layouts-main.hbs
+++ b/views/layouts-main.hbs
@@ -20,7 +20,7 @@
     </ul>
     <nav class="red darken-2">
         <div class="nav-wrapper">
-            <a href="/" class="brand-logo black-text">Clothes App</a>
+            <a href="/" class="brand-logo black-text">Style Board</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="/" class="black-text">Home</a></li>
                 <!-- Dropdown Trigger -->
