got values from db to route to pages

--- a/views/layouts-main.hbs
+++ b/views/layouts-main.hbs
@@ -47,18 +47,28 @@
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
-                <h5 class="black-text">Clothes App</h5>
+                <h5 class="black-text">Style Board</h5>
                 <p class="black-text text-lighten-4">I think I should come up with a motto or something to put here</p>
               </div>
-              <div class="col l4 offset-l2 s12">
+                <div class="col l2 offset-2 s12">
                 <h5 class="black-text">Links</h5>
+                <div class="col l2 s12"></div>
                 <ul>
                   <li><a class="black-text text-lighten-3" href="/">Home</a></li>
                   <li><a class="black-text text-lighten-3" href="/closet">Closet</a></li>
                   <li><a class="black-text text-lighten-3" href="/about">About</a></li>
                   <li><a class="black-text text-lighten-3" href="#!">More</a></li>
+                  <li><a class="black-text text-lighten-3" href="/closet/accessories">Accessories</a></li>
+                  <li><a class="black-text text-lighten-3" href="/closet/shirts">Shirts</a></li>
+                  <li><a class="black-text text-lighten-3" href="/closet/pants">Pants</a></li>
+                  <li><a class="black-text text-lighten-3" href="/closet/shoes">Shoes</a></li>
                 </ul>
               </div>
+              {{!-- <div class="col l2 s12">
+                <ul>
+                  <li><a class="black-text text-lighten-3" href="/closet/accessories"></a>Accessories</li>
+                </ul>
+              </div> --}}
             </div>
           </div>
           <div class="footer-copyright">
