--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,10 +8,17 @@ body {
   main {
     flex: 1 0 auto;
   }
-
-li {
-    color: black;
+/* label focus color */
+.x {
+    color: #000;
+    border-bottom: 1px solid #000;
 }
+/* label underline focus color */
+.x:focus {
+    border-bottom: 1px solid #000;
+    box-shadow: 0 1px 0 0 #000;
+  }
+/* https://stackoverflow.com/questions/37127123/change-color-of-underline-input-and-label-in-materialize-css-framework */
 .main-image {
     height: 650px;
     width: 1000px;
