--- a/views/add-shoes.hbs
+++ b/views/add-shoes.hbs
@@ -2,11 +2,12 @@
     <h1 class="center">Add A New Pair of Shoes</h1>
 
     <form action="/add-shoes" method="post">
-        <input type="text" name="shoes[name]" placeholder="Name " />
+        <input type="text" name="shoes[name]" placeholder="Name " class="input-field"/>
         <input type="text" name="shoes[category]" placeholder="Category" />
         <input type="text" name="shoes[color]" placeholder="Color" />
         <input type="text" name="shoes[images]" placeholder="Image URL" />
         <input type="text" name="shoes[tags]" placeholder="Tags" />
+        
         {{!-- <input type="submit" value="Add An Accessory" class="submit-button" /> --}}
     <div class=row>
         <button class="btn waves-effect waves-light col s12 black" type="submit" name="action">Submit
