--- a/views/shirts.hbs
+++ b/views/shirts.hbs
@@ -1,4 +1,14 @@
 <h1 class="center">Shirts</h1>
+
+{{#each shirts as |shirt|}}
+        {{#if shirt.images}}
+        <img src={{shirt.images}} alt="shirt-image" class="shirt-image"></img>
+        {{else}}
+        <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/340719-200.png" alt="shirt-image" class="shirt-image"></img>
+        {{/if}}
+        <a href="/closet/{{shirt.name}}">{{shirt.name}}</a>
+{{/each}}
+
 <div class=row>
         <a href="/add-shirts">
         <button class="btn waves-effect waves-light col s6 offset-s3 m4 offset-m4 l4 offset-l4" type="submit" name="action">Add Shirts
