--- a/views/shoes.hbs
+++ b/views/shoes.hbs
@@ -1,4 +1,14 @@
 <h1 class="center">Shoes</h1>
+
+        {{#each shoes as |shoe|}}
+            {{#if shoe.images}}
+            <img src={{shoe.images}} alt="shoes-image" class="shoes-image"></img>
+            {{else}}
+            <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/340719-200.png" alt="shoes-image" class="shoes-image"></img>
+            {{/if}}
+            <a href="/closet/{{shoe.name}}">{{shoe.name}}</a>
+        {{/each}}
+
 <div class=row>
         <a href="/add-shoes">
         <button class="btn waves-effect waves-light col s6 offset-s3 m4 offset-m4 l4 offset-l4 black" type="submit" name="action">Add Shoes
