added a bunch of stuff

--- a/views/add-shoes.hbs
+++ b/views/add-shoes.hbs
@@ -1,8 +1,8 @@
 <div class="#">
     <h1 class="center">Add A New Pair of Shoes</h1>
 
-    {{!-- <form action="/add-shoes" method="post"> --}}
-        <input type="text" name="shoes[name]" placeholder="Name " class="input-field"/>
+    <form action="/add-shoes" method="post">
+        <input type="text" name="shoes[name]" placeholder="Name" class="input-field" />
         <input type="text" name="shoes[category]" placeholder="Category" />
         <input type="text" name="shoes[color]" placeholder="Color" />
         <input type="text" name="shoes[images]" placeholder="Image URL" />
