--- a/views/welcome.hbs
+++ b/views/welcome.hbs
@@ -1,3 +1,5 @@
 <h1 class="center">Style Board</h1>
 
-<div class="main-image"></div>
+<div class="s12">
+    <div class="main-image"></div>
+</div>  
