--- a/views/accessories.hbs
+++ b/views/accessories.hbs
@@ -6,12 +6,12 @@
         {{else}}
         <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/340719-200.png" alt="accessories-image" class="accessories-image"></img>
         {{/if}}
-        <a href="/closet/{{accessory.name}}">{{accessory.name}}</a>
+        <a href="/closet/accessories/{{accessory.name}}">{{accessory.name}}</a>
 {{/each}}
 
 <div class=row>
         <a href="/add-accessories">
-        <button class="btn waves-effect waves-light col s6 offset-s3 m4 offset-m4 l4 offset-l4" type="submit" name="action">Add Accessories
+        <button class="btn waves-effect waves-light col s6 offset-s3 m4 offset-m4 l4 offset-l4 black" type="submit" name="action">Add Accessories
         <i class="material-icons right">send</i>
         </button>
         </a>
