--- a/views/add-shirts.hbs
+++ b/views/add-shirts.hbs
@@ -9,7 +9,7 @@
         <input type="text" name="shirts[tags]" placeholder="Tags" />
         {{!-- <input type="submit" value="Add An Accessory" class="submit-button" /> --}}
     <div class=row>
-        <button class="btn waves-effect waves-light col s4 offset-s4 m2 offset-m5" type="submit" name="action">Submit
+        <button class="btn waves-effect waves-light col s12 black" type="submit" name="action">Submit
         <i class="material-icons right">send</i>
         </button>
     </div>
