--- a/views/item.hbs
+++ b/views/item.hbs
@@ -1,7 +1,7 @@
 <div class="#">
     <h1 class="center">Add A New Accessory</h1>
 
-    <form action="/add-accessories" method="post" class="new-accessories-form">
+    <form action="/individual-item" method="put" class="new-accessories-form">
         <input type="text" name="accessories[name]" placeholder="Name " />
         <input type="text" name="accessories[category]" placeholder="Category" />
         <input type="text" name="accessories[color]" placeholder="Color" />
@@ -9,7 +9,7 @@
         <input type="text" name="accessories[tags]" placeholder="Tags" />
         {{!-- <input type="submit" value="Add An Accessory" class="submit-button" /> --}}
     <div class=row>
-        <button class="btn waves-effect waves-light col s4 offset-s4 m2 offset-m5" type="submit" name="action">Submit
+        <button class="btn waves-effect waves-light col s12 black" type="submit" name="action">Submit
         <i class="material-icons right">send</i>
         </button>
     </div>
