--- a/views/item.hbs
+++ b/views/item.hbs
@@ -1,12 +1,12 @@
 <div class="#">
-    <h1 class="center">Add A New Accessory</h1>
+    <h1 class="center">Update {{ shoe.name }}</h1>
 
-    <form action="/individual-item" method="put" class="new-accessories-form">
-        <input type="text" name="accessories[name]" placeholder="Name " />
-        <input type="text" name="accessories[category]" placeholder="Category" />
-        <input type="text" name="accessories[color]" placeholder="Color" />
-        <input type="text" name="accessories[images]" placeholder="Image URL" />
-        <input type="text" name="accessories[tags]" placeholder="Tags" />
+    <form action="/closet/shoes/{{shoe.name}}?_method=put" method="post" class="new-shoes-form">
+        <input type="text" name="shoes[name]" placeholder="Name " />
+        <input type="text" name="shoes[category]" placeholder="Category" />
+        <input type="text" name="shoes[color]" placeholder="Color" />
+        <input type="text" name="shoes[images]" placeholder="Image URL" />
+        <input type="text" name="shoes[tags]" placeholder="Tags" />
         {{!-- <input type="submit" value="Add An Accessory" class="submit-button" /> --}}
     <div class=row>
         <button class="btn waves-effect waves-light col s12 black" type="submit" name="action">Submit
