--- a/views/shoes.hbs
+++ b/views/shoes.hbs
@@ -6,7 +6,7 @@
             {{else}}
             <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/340719-200.png" alt="shoes-image" class="shoes-image"></img>
             {{/if}}
-            <a href="/closet/{{shoe.name}}">{{shoe.name}}</a>
+            <a href="/closet/shoes/{{shoe.name}}">{{shoe.name}}</a>
         {{/each}}
 
 <div class=row>
