got all update and delete routes working

--- a/views/pants.hbs
+++ b/views/pants.hbs
@@ -6,7 +6,7 @@
         {{else}}
         <img src"https://d30y9cdsu7xlg0.cloudfront.net/png/340719-200.png" alt="pants-image" class="pants-image"></img>
         {{/if}}
-        <a href="/closet/{{pant.name}}">{{pant.name}}</a>
+        <a href="/closet/pants/{{pant.name}}">{{pant.name}}</a>
 {{/each}}
 
 <div class=row>
