--- a/views/shirts.hbs
+++ b/views/shirts.hbs
@@ -6,7 +6,7 @@
         {{else}}
         <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/340719-200.png" alt="shirt-image" class="shirt-image"></img>
         {{/if}}
-        <a href="/closet/{{shirt.name}}">{{shirt.name}}</a>
+        <a href="/closet/shirts/{{shirt.name}}">{{shirt.name}}</a>
 {{/each}}
 
 <div class=row>
