--- a/views/item.hbs
+++ b/views/item.hbs
@@ -14,4 +14,7 @@
         </button>
     </div>
     </form>
+    <form action="/closet/shoes/{{shoe.name}}?_method=delete" method="post">
+        <button class="btn waves-effect waves-light col s12 black" type="submit" name="action">Delete</button>
+    </form>
 </div>
