--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,1 +1,2 @@
 <h1 class="center">About</h1>
+<p>Style Board is an app that allows you to organize the items in your closet and have a more solid visual at all times. You can now go shopping for new clothes and know exactly what you have at home to match.</p>
