--- a/views/layouts-main.hbs
+++ b/views/layouts-main.hbs
@@ -48,7 +48,7 @@
             <div class="row">
               <div class="col l6 s12">
                 <h5 class="black-text">Style Board</h5>
-                <p class="black-text text-lighten-4">I think I should come up with a motto or something to put here</p>
+                <p class="black-text text-lighten-4">Get your outfits together with less effort</p>
               </div>
                 <div class="col l2 offset-2 s12">
                 <h5 class="black-text">Links</h5>
@@ -57,7 +57,7 @@
                   <li><a class="black-text text-lighten-3" href="/">Home</a></li>
                   <li><a class="black-text text-lighten-3" href="/closet">Closet</a></li>
                   <li><a class="black-text text-lighten-3" href="/about">About</a></li>
-                  <li><a class="black-text text-lighten-3" href="#!">More</a></li>
+                  {{!-- <li><a class="black-text text-lighten-3" href="#!">More</a></li> --}}
                   <li><a class="black-text text-lighten-3" href="/closet/accessories">Accessories</a></li>
                   <li><a class="black-text text-lighten-3" href="/closet/shirts">Shirts</a></li>
                   <li><a class="black-text text-lighten-3" href="/closet/pants">Pants</a></li>
