--- a/views/layouts-main.hbs
+++ b/views/layouts-main.hbs
@@ -24,7 +24,7 @@
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="/" class="black-text">Home</a></li>
                 <!-- Dropdown Trigger -->
-                <li><a href="/closet" data-target="dropdown1" class="black-text">Closet</a></li>
+                {{!-- <li><a href="/closet" data-target="dropdown1" class="black-text">Closet</a></li> --}}
                 <li><a href="/about" class="black-text">About</a></li>
                 <!-- Dropdown Trigger -->
                 <li><a class ="dropdown-trigger" href="#" data-target="dropdown1" class="black-text"><i class="material-icons black">more_vert</i></a></li>
@@ -55,7 +55,7 @@
                 <div class="col l2 s12"></div>
                 <ul>
                   <li><a class="black-text text-lighten-3" href="/">Home</a></li>
-                  <li><a class="black-text text-lighten-3" href="/closet">Closet</a></li>
+                  {{!-- <li><a class="black-text text-lighten-3" href="/closet">Closet</a></li> --}}
                   <li><a class="black-text text-lighten-3" href="/about">About</a></li>
                   {{!-- <li><a class="black-text text-lighten-3" href="#!">More</a></li> --}}
                   <li><a class="black-text text-lighten-3" href="/closet/accessories">Accessories</a></li>
