--- a/views/shoes.hbs
+++ b/views/shoes.hbs
@@ -2,7 +2,7 @@
 
         {{#each shoes as |shoe|}}
             {{#if shoe.images}}
-            <img src={{shoe.images}} alt="shoes-image" class="shoes-image"></img>
+            <a href="/closet/shoes/{{shoe.name}}"><img src={{shoe.images}} alt="shoes-image" class="shoes-image"></img></a>
             {{else}}
             <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/340719-200.png" alt="shoes-image" class="shoes-image"></img>
             {{/if}}
