updated forms with require

--- a/views/add-pants.hbs
+++ b/views/add-pants.hbs
@@ -2,10 +2,10 @@
     <h1 class="center">Add A New Pair of Pants</h1>
 
     <form action="/add-shirts" method="post" class="new-pants-form">
-        <input type="text" name="pants[name]" placeholder="Name " />
-        <input type="text" name="pants[category]" placeholder="Category" />
-        <input type="text" name="pants[color]" placeholder="Color" />
-        <input type="text" name="pants[images]" placeholder="Image URL" />
+        <input type="text" name="pants[name]" placeholder="Name " required/>
+        <input type="text" name="pants[category]" Value="Pants" />
+        <input type="text" name="pants[color]" placeholder="Color" required/>
+        <input type="text" name="pants[images]" placeholder="Image URL" required/>
         <input type="text" name="pants[tags]" placeholder="Tags" />
         {{!-- <input type="submit" value="Add An Accessory" class="submit-button" /> --}}
     <div class=row>
