--- a/views/add-accessories.hbs
+++ b/views/add-accessories.hbs
@@ -2,10 +2,10 @@
     <h1 class="center">Add A New Accessory</h1>
 
     <form action="/add-accessories" method="post" class="new-accessories-form">
-        <input type="text" name="accessories[name]" placeholder="Name " />
-        <input type="text" name="accessories[category]" placeholder="Category" />
-        <input type="text" name="accessories[color]" placeholder="Color" />
-        <input type="text" name="accessories[images]" placeholder="Image URL" />
+        <input type="text" name="accessories[name]" placeholder="Name " required/>
+        <input type="text" name="accessories[category]" Value="Accessory" />
+        <input type="text" name="accessories[color]" placeholder="Color" required/>
+        <input type="text" name="accessories[images]" placeholder="Image URL" required/>
         <input type="text" name="accessories[tags]" placeholder="Tags" />
         {{!-- <input type="submit" value="Add An Accessory" class="submit-button" /> --}}
     <div class=row>
