--- a/views/add-shoes.hbs
+++ b/views/add-shoes.hbs
@@ -2,10 +2,10 @@
     <h1 class="center">Add A New Pair of Shoes</h1>
 
     <form action="/add-shoes" method="post">
-        <input type="text" name="shoes[name]" placeholder="Name" class="input-field" />
-        <input type="text" name="shoes[category]" placeholder="Category" />
-        <input type="text" name="shoes[color]" placeholder="Color" />
-        <input type="text" name="shoes[images]" placeholder="Image URL" />
+        <input type="text" name="shoes[name]" placeholder="Name" class="input-field" required/>
+        <input type="text" name="shoes[category]" Value="Shoe" />
+        <input type="text" name="shoes[color]" placeholder="Color" required/>
+        <input type="text" name="shoes[images]" placeholder="Image URL" required/>
         <input type="text" name="shoes[tags]" placeholder="Tags" />
         
         {{!-- <input type="submit" value="Add An Accessory" class="submit-button" /> --}}
