made delete buttons bigger

--- a/views/pants.hbs
+++ b/views/pants.hbs
@@ -4,7 +4,7 @@
         {{#if pant.images}}
         <img src={{pant.images}} alt="pants-image" class="pants-image"></img>
         {{else}}
-        <img src"https://d30y9cdsu7xlg0.cloudfront.net/png/340719-200.png" alt="pants-image" class="pants-image"></img>
+        <a href="/closet/pants/{{pant.name}}"><img src"https://d30y9cdsu7xlg0.cloudfront.net/png/340719-200.png" alt="pants-image" class="pants-image"></img></a>
         {{/if}}
         <a href="/closet/pants/{{pant.name}}">{{pant.name}}</a>
 {{/each}}
