--- a/views/accessories.hbs
+++ b/views/accessories.hbs
@@ -2,7 +2,7 @@
 
 {{#each accessories as |accessory|}}
         {{#if accessory.images}}
-        <img src={{accessory.images}} alt="accessories-image" class="accessories-image"></img>
+        <a href="/closet/accessories/{{accessory.name}}"><img src={{accessory.images}} alt="accessories-image" class="accessories-image"></img></a>
         {{else}}
         <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/340719-200.png" alt="accessories-image" class="accessories-image"></img>
         {{/if}}
