--- a/views/update-pants.hbs
+++ b/views/update-pants.hbs
@@ -14,7 +14,9 @@
         </button>
     </div>
     </form>
+    <div class=row>
     <form action="/closet/pants/{{pant.name}}?_method=delete" method="post">
         <button class="btn waves-effect waves-light col s12 black" type="submit" name="action">Delete</button>
     </form>
+    </div>
 </div>
