fixed pants image link

--- a/views/pants.hbs
+++ b/views/pants.hbs
@@ -2,9 +2,9 @@
 
 {{#each pants as |pant|}}
         {{#if pant.images}}
-        <img src={{pant.images}} alt="pants-image" class="pants-image"></img>
+        <a href="/closet/pants/{{pant.name}}"><img src={{pant.images}} alt="pants-image" class="pants-image"></img></a>
         {{else}}
-        <a href="/closet/pants/{{pant.name}}"><img src"https://d30y9cdsu7xlg0.cloudfront.net/png/340719-200.png" alt="pants-image" class="pants-image"></img></a>
+        <img src"https://d30y9cdsu7xlg0.cloudfront.net/png/340719-200.png" alt="pants-image" class="pants-image"></img>
         {{/if}}
         <a href="/closet/pants/{{pant.name}}">{{pant.name}}</a>
 {{/each}}
