made images responsive

--- a/views/add-pants.hbs
+++ b/views/add-pants.hbs
@@ -9,9 +9,7 @@
         <input type="text" name="pants[tags]" placeholder="Tags" />
         {{!-- <input type="submit" value="Add An Accessory" class="submit-button" /> --}}
     <div class=row>
-        <button class="btn waves-effect waves-light col s12 black" type="submit" name="action">Submit
-        <i class="material-icons right">send</i>
-        </button>
+        <button class="btn waves-effect waves-light col s12 black" type="submit" name="action">Submit</button>
     </div>
     </form>
 </div>
