--- a/views/layouts-main.hbs
+++ b/views/layouts-main.hbs
@@ -21,6 +21,7 @@
     <nav class="red darken-2">
         <div class="nav-wrapper">
             <a href="/" class="brand-logo black-text">Style Board</a>
+            {{!-- <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a> --}}
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="/" class="black-text">Home</a></li>
                 <!-- Dropdown Trigger -->
