--- a/views/welcome.hbs
+++ b/views/welcome.hbs
@@ -1,5 +1,5 @@
 <h1 class="center">Style Board</h1>
 
 <div class="s12">
-    <div class="main-image"></div>
+    <img src="http://images.jordansdaily.com/wp-content/uploads/2016/06/air-jordan-3-black-cement-3.png" class="main-image responsive-img" />
 </div>  
