--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,8 +4,7 @@ body {
     flex-direction: column;
     color: black;
   }
-
-  main {
+main {
     flex: 1 0 auto;
   }
 /* label focus color */
@@ -22,6 +21,7 @@ body {
 .main-image {
     height: 650px;
     width: 1000px;
-    background:url('http://images.jordansdaily.com/wp-content/uploads/2016/06/air-jordan-3-black-cement-3.png')
+    /* background:url('http://images.jordansdaily.com/wp-content/uploads/2016/06/air-jordan-3-black-cement-3.png'); */
+    border: none;
 }
 
