--- a/views/pants.hbs
+++ b/views/pants.hbs
@@ -2,7 +2,7 @@
 
 {{#each pants as |pant|}}
         {{#if pant.images}}
-        <a href="/closet/pants/{{pant.name}}"><img src={{pant.images}} alt="pants-image" class="pants-image"></img></a>
+        <a href="/closet/pants/{{pant.name}}"><img src={{pant.images}} alt="pants-image" class="pants-image responsive-img"></img></a>
         {{else}}
         <img src"https://d30y9cdsu7xlg0.cloudfront.net/png/340719-200.png" alt="pants-image" class="pants-image"></img>
         {{/if}}
