--- a/views/shirts.hbs
+++ b/views/shirts.hbs
@@ -2,11 +2,13 @@
 
 {{#each shirts as |shirt|}}
         {{#if shirt.images}}
-        <a href="/closet/shirts/{{shirt.name}}"><img src={{shirt.images}} alt="shirt-image" class="shirt-image responsive-img"></img></a>
+        <div class="carousel">
+        <a href="/closet/shirts/{{shirt.name}}" class="carousel-item"><img src={{shirt.images}} alt="shirt-image" class="shirt-image responsive-img"></img></a>
+        </div>
         {{else}}
         <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/340719-200.png" alt="shirt-image" class="shirt-image"></img>
         {{/if}}
-        <a href="/closet/shirts/{{shirt.name}}">{{shirt.name}}</a>
+        {{!-- <a href="/closet/shirts/{{shirt.name}}" class="shirt-name">{{shirt.name}}</a> --}}
 {{/each}}
 
 <div class=row>
